--- a/.github/.workflows/ExercicioCI.yaml
+++ b/.github/.workflows/ExercicioCI.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   PrimeiroJob-build:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: "printa Hello World"
