--- a/.github/.workflows/ExercicioCI.yaml
+++ b/.github/.workflows/ExercicioCI.yaml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "printa Hello World"
+      - name: printa Hello World
         run: echo ""Hello World"
