--- a/.github/workflows/ExercicioCI.yaml
+++ b/.github/workflows/ExercicioCI.yaml
@@ -11,11 +11,11 @@ jobs:
 
     steps:
       - name: printa Hello World
-        run: echo ""Hello World"
+        run: echo "Hello World"
 
       - name: estou usando o repositorio...
         run: "estou usando o repositorio - $({ github.repository })"
 
-        
+
 
       
