--- a/.github/workflows/ExercicioCI.yaml
+++ b/.github/workflows/ExercicioCI.yaml
@@ -14,8 +14,7 @@ jobs:
         run: echo "Hello World"
 
       - name: estou usando o repositorio...
-        run: "estou usando o repositorio - $({ github.repository })"
-
+        run: echo "estou usando o repositorio - $({ github.repository })"
 
 
       
