--- a/.github/workflows/ExercicioCI.yaml
+++ b/.github/workflows/ExercicioCI.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Meu nome e RA
         run: echo "Jefferson Nacimento - 6324617"
       - name: Mostra o diretório de trabalho
-        run: pmd
+        run: ${{pmd}}
       - name: Mostra o nome do repositório
         run: acho "${{ github.repository }}"
 
